--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap');
+
+body {
+    background-color: #e6e6e6;
+}
+
 .login-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 8rem;
 }
 p {
     margin: 0px !important;
@@ -11,14 +18,52 @@ p {
     margin: 60px 0px 20px 0px ;
     color: #000;
     font-weight: bold;
+    font-family: 'Oswald';
 }
 
 .sub-btn {
+    font-family: 'Oswald';
+    height: 62px;
+    width: 130px;
     margin: 20px 0px 0px 0px;
     color: #fff;
-    background-color: #89CFF0;
-    border-radius: 10px;
+    background-color: #000;
+    border-radius: 30px;
+    border: none;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
+.username {
+    font-family: 'Oswald';
+    font-size: 16px;
+    color: #43383e;
+    line-height: 1.2;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 62px;
+    background: #fff;
+    border-radius: 31px;
+    padding: 0 35px 0 35px;
+}
+
+.password {
+    font-family: 'Oswald';
+    font-size: 16px;
+    color: #43383e;
+    line-height: 1.2;
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 62px;
+    background: #fff;
+    border-radius: 31px;
+    padding: 0 35px 0 35px;
+}
+
+input {
+    outline: none;
+    border: none;
+}
