--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,24 +1,30 @@
 .card-title{
     font-family: 'Oswald';
-    font-size: 30px;
+    font-size: 30px !important;
 }
 
 .card {
     border: none;
     display: flex;
-
+    border-radius: 30px !important;
+  
 }
-
-.card-body {
+.card:hover {
+    transition: 0.5s;
+    -webkit-box-shadow: 0px 0px 16px -5px #000000; 
+    box-shadow: 0px 0px 16px 0.1px #FA8072;
+}
+.container-btn {
     display: flex;
     justify-content: space-evenly;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
     align-items: center;
 }
 
 .city {
+    font-size: 18px;
     font-weight: 500;
     color: #808080;
 }
@@ -44,11 +50,15 @@
 }
 
 .service {
-    border-radius: 30px;
+    height: 26px !important;
+    border-radius: 30px !important;
+    border: none !important;
+    padding: 0px 10px !important;
     font-family: 'Oswald';
-    position: absolute;
-    top: 6px;
-    right: 4px;
+    /* position: absolute;
+    top: 0px;
+    left: 0px; */
+    background-color: #FA8072 !important;
 }
 
 .container-btn {
@@ -57,11 +67,31 @@
 
 .name-age {
     display: flex;
-    align-items:center ;
+    align-items:center;
+    margin: 4px 0px 0px 0px;
 }
 
 .age {
  font-size: 20px;
  font-weight: 500;
  color: #808080;
+}
+
+.edit-button {
+    border-radius: 1px !important;
+    background: #000 !important;
+    border: none !important;
+    font-family: 'Oswald' !important;
+}
+.delete-button {
+    border-radius: 1px !important;
+    background: #000 !important;
+    border: none !important;
+    font-family: 'Oswald' !important;
+}
+
+.card-img-top {
+    padding: 10px 10px 0px 10px!important;
+    width: auto !important;
+    border-radius: 30px !important;
 }
