--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,26 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap');
 
 body {
-    background-color: #e6e6e6;
+background-color: #e6e6e6;
 }
 
-.login-wrapper {
+.wrapper-for-login {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: 8rem;
 }
+
+.img-login img {
+    width: 250px;
+    height: auto;
+}
+
+.login-wrapper {
+    width: 400px;
+    /* background: #fff; */
+    border-radius: 10px;
+    position: relative;
+}
+
 p {
     margin: 0px !important;
 }
+
 .title {
     margin: 60px 0px 20px 0px ;
     color: #000;
     font-weight: bold;
     font-family: 'Oswald';
 }
-
 .sub-btn {
     font-family: 'Oswald';
     height: 62px;
@@ -36,17 +49,11 @@ p {
 }
 
 .username {
-    font-family: 'Oswald';
-    font-size: 16px;
-    color: #43383e;
-    line-height: 1.2;
-    position: relative;
-    display: block;
     width: 100%;
-    height: 62px;
-    background: #fff;
-    border-radius: 31px;
-    padding: 0 35px 0 35px;
+    position: relative;
+    background-color: #e6e6e6;
+    border: 1px solid transparent;
+    border-radius: 3px;
 }
 
 .password {
@@ -67,3 +74,81 @@ input {
     outline: none;
     border: none;
 }
+
+.wrap-input100 {
+    width: 100%;
+    position: relative;
+    background-color: #e6e6e6;
+    border: 1px solid transparent;
+    border-radius: 3px;
+}
+.input100 {
+    font-family: 'Oswald';
+    /* color: #403866; */
+    line-height: 1.2;
+    font-size: 18px;
+    display: block;
+    width: 100%;
+    background: transparent;
+    height: 62px;
+    padding: 0 20px 0 38px;
+}
+.login100-form-title {
+    font-family: 'Oswald';
+    font-size: 30px;
+    font-weight: bold;
+    color: #403866;
+    line-height: 1.2;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    display: block;
+    margin: 60px 0px 20px 0px ;
+}
+
+.login100-form-btn {
+    font-family: 'Oswald';
+    font-size: 18px;
+    color: #fff;
+    line-height: 1.2;
+    text-transform: uppercase;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px;
+    width: 100%;
+    height: 62px;
+    background-color: #000;
+    border-radius: 3px;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+    border: none;
+}
+/* .focus-input100 {
+    position: absolute;
+    display: block;
+    width: calc(100% + 2px);
+    height: calc(100% + 2px);
+    top: -1px;
+    left: -1px;
+    pointer-events: none;
+    border: 1px solid #827ffe;
+    border-radius: 3px;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+    -webkit-transform: scaleX(1.1) scaleY(1.3);
+    -moz-transform: scaleX(1.1) scaleY(1.3);
+    -ms-transform: scaleX(1.1) scaleY(1.3);
+    -o-transform: scaleX(1.1) scaleY(1.3);
+    transform: scaleX(1.1) scaleY(1.3);
+} */
